--- a/wener-dm/package.json
+++ b/wener-dm/package.json
@@ -11,7 +11,9 @@
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
     "flux": "^3.1.3",
+    "formik": "^2.2.9",
     "lodash.find": "^4.6.0",
+    "numeral": "^2.0.6",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-ga": "^2.5.6",
