--- a/wener-im/package.json
+++ b/wener-im/package.json
@@ -7,7 +7,9 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
+    "@mui/material": "^5.10.0",
+    "@mui/x-data-grid": "^5.15.2",
+    "@mui/x-date-pickers": "^5.0.0-beta.5",
     "@supabase/supabase-js": "^1.29.4",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
@@ -17,6 +19,7 @@
     "flux": "^3.1.3",
     "install": "^0.13.0",
     "lodash.find": "^4.6.0",
+    "moment": "^2.29.4",
     "npm": "^8.16.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
