--- a/wener-zm/package.json
+++ b/wener-zm/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.3",
     "@supabase/supabase-js": "^1.29.4",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
