--- a/wener-chairman/package.json
+++ b/wener-chairman/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.10.0",
+    "@mui/x-data-grid": "^5.15.2",
+    "@mui/x-date-pickers": "^5.0.0-beta.5",
     "@supabase/supabase-js": "^1.29.4",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.3",
