--- a/wener-hr/netlify.toml
+++ b/wener-hr/netlify.toml
@@ -2,3 +2,10 @@
     from = "/*"
     to = "/index.html"
     status = 200
+[build]
+  functions = 'netlify/functions'  # Path to your Netlify Functions directory
+  command = 'npm run build'  # Your build command if needed
+  publish = 'public'  # Your static files directory
+
+[context.production.environment]
+  NODE_VERSION = '20'  # Use the Node.js version you need
